# agency

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .mcp.json  .npmignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  Agency-桌面版.pyw  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS-QUICK-REF.md  CONTRIBUTING.md  Dockerfile  Dagencytoc-gen.py  GETTING-STARTED.md  LICENSE  README.en.md  README.md  RELEASE.md  RULES.md  SECURITY.md  SOUL.md  SPONSORING.md  SPONSORS.md  TOC.md  TROUBLESHOOTING.md  USAGE.md  agent.yaml  code-stats.py  docker-compose.yml  gunicorn.conf.py  install.bat  install.ps1  install.sh  json-reader.py  package.json  (+8 more)
.claude/: CLAUDE.md  settings.json
.codex/: CLAUDE.md
.context/: BACKLOG.md  PROTOCOL.md  SESSION.md  handoff.md
.cursor/: rules
.gemini/: GEMINI.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agents/: a11y-expert.md  api-designer.md  architect.md  build-error-resolver.md  ceo.md  code-reviewer.md  cost-analyst.md  critic.md  data-engineer.md  designer.md  devops.md  general-worker.md  incident-responder.md  knowledge-synthesizer.md  observability-engineer.md  orchestrator.md  pentester.md  python-reviewer.md  qa.md  release-manager.md  router.md  secret-scanner.md  verifier.md
commands/: compress.md  cost.md  status.md  track.md
docs/: DEPLOYMENT.md  GETTING-STARTED.md  REQUIREMENTS.md  TOC.md  TROUBLESHOOTING.md  USAGE.md
examples/: custom-agent.md  custom-rule.md  maestro-integration.md
hooks/: PostToolUse.sh  PreCompact.sh  SessionStart.sh  Stop.sh
maestro/: .rate_limit_state.json  _body2.json  agent_parser.py  agents.json  api_errors.py  app_config.py  async_runner.py  claude_session.py  cleanup-agents.py  compaction_config.json  context_layer.py  conversations.json  coordinator.py  cost-analyzer.py  cost-tracker.py  cron_jobs.json  cron_scheduler.py  dispatch.py  embedding.py  env_loader.py  flask_adapter.py  flask_app.py  gateway.py  issues.md  main.py  memory_engine.py  models.py  permission_engine.py  pipeline.py  proc_manager.py  process_pool.py  profiles.py  remote.py  run.py  safety.py  sandbox.py  session_store.py  settings_sync.py  shared.py  task-tracker.py  (+9 more)
rules/: architecture.md  coding-style.md  git-workflow.md  maestro.md  security.md
scripts/: check-all.py  check-frontend.py  code-stats.py  format.py  install-apply.js  json-reader.py  smoke-test.py  toc-gen.py  weixin-bot.py
tasks/: agent-skill-optimization-plan.md  full-plan.md  redo-list.md  ux-plan.md  ux-summary.md
tests/: _write_runner.py  _writer.py  _writer_helper.py  conftest.py  dispatch.test.py  test_01_api_endpoints.py  test_02_frontend_js.py  test_03_error_handling.py  test_04_file_encoding.py  test_agents.py  (+9 more)
(+269 files in other folders)
